--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "^9.0.7",
     "@angular/router": "^9.0.7",
     "@ionic-native/core": "^5.23.0",
-    "@ionic-native/in-app-browser": "^5.23.0",
+    "@ionic-native/in-app-browser": "^5.24.0",
     "@ionic-native/screen-orientation": "^5.23.0",
     "@ionic-native/splash-screen": "^5.23.0",
     "@ionic-native/status-bar": "^5.23.0",
@@ -46,6 +46,7 @@
     "@angular/compiler-cli": "^9.0.7",
     "@angular/language-service": "~9.0.7",
     "@ionic/angular-toolkit": "^2.2.0",
+    "@ionic/lab": "3.1.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
